# signalstripper

./: .gitignore  .gitmodules  pyproject.toml
docs/: WORKFLOW.md
src/signalstripper/: _db_utils.py  analyze.py  browse.py  cli.py  emit.py  extract.py  mock.py  select.py  server.py
src/signalstripper/routes/: api.py
src/signalstripper/schema/: introspect.py  registry.py
src/signalstripper/schema/profiles/: v166.toml
src/signalstripper/static/: app.js  index.html  style.css
tests/: conftest.py  test_analyze.py  test_browse.py  test_emit.py  test_introspect.py  test_routes.py  test_schema_registry.py  test_server_safety.py  test_ui.py
tests/fixtures/: build_fixture_db.py  capture_docs_screenshots.py  signal_v166.db
