[project]
name = "signalstripper"
version = "0.1.0"
description = "Signal Backup Analysis & Reclaim Tool"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "starlette>=0.40",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
]

[project.scripts]
signalstripper = "signalstripper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "anyio>=4",
    "httpx>=0.27",
    "coverage[toml]>=7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/signalstripper"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/signalstripper"]
branch = true
